--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -71,6 +71,8 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 ### Unsupervised learning (비지도 학습) 발전 과정 
 
+기술이 발달할수록 더 자연스러워짐
+
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/비지도학습_발전과정.png)
 
 <br/>
