--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -88,8 +88,11 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 <br/>
 
+### Unsupervised learning (비지도 학습) CycleGAN 모델 성과 
 
+CycleGAN이라는 모델은 말 사진과 얼룩말 사진을 학습해서, 서로 변환이 가능함 
 
+![System Resources](../../images/Artificial%20Neural%20Network%20images/cycle_GAN.png)
 
 
 
