--- a/Artificial Neural Network/Artificial Neural Network study/01장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/01장.md
@@ -69,6 +69,16 @@ MNIST를 이용하여 손글씨 2를 찾는 장면
 
 <br/>
 
+### Supervised learning (지도학습) 문제 정의 
+
+- 지도학습 전 준비 : p개의 예측 변수 x 벡터와 결과 변수 y
+   - 회귀 문제 : Y가 수치형(숫자) 값 ex: 가격(만원 단위), 혈압(mmHg), 몸무게(kg)
+ 
+   - 분류 문제 : Y가 유한하고 순서 없는 집합의 값 ex: 생존/사망, 손글씨 숫자(0~9), 조직 샘플의 암 종류
+
+<br/>
+
+
 ### Unsupervised learning (비지도 학습) 발전 과정 
 
 기술이 발달할수록 더 자연스러워짐
