--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -7,12 +7,12 @@
 
 ### 명제 예시 
 
-1. The Moon is made of green cheese. → 달이 녹색 치즈로 만들어졌다는 문장. 사실은 거짓이지만, 참/거짓을 판단할 수 있으므로 명제입니다.
+- The Moon is made of green cheese. → 달이 녹색 치즈로 만들어졌다는 문장. 사실은 거짓이지만, 참/거짓을 판단할 수 있으므로 명제입니다.
 
-2. Trenton is the capital of New Jersey. → 트렌턴이 뉴저지 주의 수도라는 주장. 사실 참(True)입니다.
+- Trenton is the capital of New Jersey. → 트렌턴이 뉴저지 주의 수도라는 주장. 사실 참(True)입니다.
 
-3. Toronto is the capital of Canada. → 토론토가 캐나다의 수도라는 주장. 사실은 거짓(False, 수도는 오타와). 하지만 참/거짓 판별이 가능하므로 명제입니다.
+- Toronto is the capital of Canada. → 토론토가 캐나다의 수도라는 주장. 사실은 거짓(False, 수도는 오타와). 하지만 참/거짓 판별이 가능하므로 명제입니다.
 
-4. 1 + 0 = 1 → 수학적으로 참(True)이므로 명제.
+- 1 + 0 = 1 → 수학적으로 참(True)이므로 명제.
 
-5. 0 + 0 = 2 → 수학적으로 거짓(False)이므로 명제.
+-  0 + 0 = 2 → 수학적으로 거짓(False)이므로 명제.
