--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -16,3 +16,15 @@
 - 1 + 0 = 1 → 수학적으로 참(True)이므로 명제.
 
 -  0 + 0 = 2 → 수학적으로 거짓(False)이므로 명제.
+
+<br/>
+
+### 명제가 아닌 예시 
+
+- Sit down! → 명령문. 참/거짓을 따질 수 없으므로 명제가 아님.
+
+- What time is it? → 질문문. 역시 참/거짓이 없으므로 명제가 아님.
+
+- x + 1 = 2 → 미지수 x 값에 따라 참/거짓이 달라지므로 불확정. 단일 명제가 아님.
+
+- x + y = z → 변수 값이 정해지지 않아 참/거짓 판단 불가. 따라서 명제가 아님.
