--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -28,3 +28,26 @@
 - x + 1 = 2 → 미지수 x 값에 따라 참/거짓이 달라지므로 불확정. 단일 명제가 아님.
 
 - x + y = z → 변수 값이 정해지지 않아 참/거짓 판단 불가. 따라서 명제가 아님.
+
+<br/>
+
+### 명제 기호 
+
+- Propositional Variables: p, q, r, s, 등등
+     - 명제를 기호화할 때 p, q, r, s 같은 문자를 사용
+ 
+     - ex : “The earth is round” → p 로 표현
+
+- 항상 참인 명제를 T (Tautology, 항진명제)
+
+- 항상 거짓인 명제를 F (Contradiction, 모순명제)
+
+- Negation (¬): 부정. 예) “p가 참” → “¬p는 거짓”
+
+- Conjunction (∧): 논리곱, “그리고(and)”
+
+- Disjunction (∨): 논리합, “또는(or)”
+
+- Implication (→): 함의, “만약 …라면 …이다 (if … then …)”
+
+- Biconditional (↔): 쌍조건, “…일 때 그리고 그 경우에만 …이다 (if and only if, iff)”
