--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -42,7 +42,7 @@
 
 - 항상 거짓인 명제를 F (Contradiction, 모순명제)
 
-- Negation (¬): 부정. 예) “p가 참” → “¬p는 거짓”
+- Negation (¬): 부정. ex: “p가 참” → “¬p는 거짓”
 
 - Conjunction (∧): 논리곱, “그리고(and)”
 
