--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -51,3 +51,9 @@
 - Implication (→): 함의, “만약 …라면 …이다 (if … then …)”
 
 - Biconditional (↔): 쌍조건, “…일 때 그리고 그 경우에만 …이다 (if and only if, iff)”
+
+아래에서 명제 기호를 하나씩 살펴보자 
+
+<br/>
+
+### Negation (¬)     
