--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -56,5 +56,7 @@
 
 <br/>
 
-### Negation (¬)    
+### Negation (¬)   
+
+![System Resources](../../images/Discrete%20Structures%20images/negation.png)
 
