--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -58,5 +58,10 @@
 
 ### Negation (¬)   
 
+- 명제 p의 부정은 ¬p로 표시함
+    - p가 참이면 ¬p는 거짓, p가 거짓이면 ¬p는 참
+ 
+    - ex : p = “지구는 둥글다.” , ¬p = “지구가 둥글지 않다.”
+
 ![System Resources](../../images/Discrete%20Structures%20images/negation.png)
 
