--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -69,5 +69,7 @@
 
 ### Conjunction (∧) : 논리곱
 
+- 두 명제 p와 q를 동시에 만족해야 참이 되는 경우를 뜻
+
 ![System Resources](../../images/Discrete%20Structures%20images/conjunction.png)
 
