--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -70,7 +70,8 @@
 ### Conjunction (∧) : 논리곱
 
 - 두 명제 p와 q를 동시에 만족해야 참
-   - ex : p = “나는 집에 있다.”
+   - 아래는 예시이다 
+   - p = “나는 집에 있다.”
    - q = “비가 온다.”
    - p ∧ q = “나는 집에 있고 비가 온다.
 
