--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -69,7 +69,7 @@
 
 ### Conjunction (∧) : 논리곱
 
-- 두 명제 p와 q를 동시에 만족해야 참
+- 두 명제 p와 q를 동시에 만족해야 참. **그리고 (AND)** 를 의미
   
    - 아래는 예시이다 
    - p = “나는 집에 있다.”
@@ -77,4 +77,12 @@
    - p ∧ q = “나는 집에 있고 비가 온다.
 
 ![System Resources](../../images/Discrete%20Structures%20images/conjunction.png)
+
+<br/>
+
+### Disjunction (논리합, ∨)
+
+- 두 명제 중 하나 이상이 참이면 전체가 참. **또는 (OR)** 을 의미
+
+![System Resources](../../images/Discrete%20Structures%20images/disjunction.png)
 
