--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -83,6 +83,11 @@
 ### Disjunction (논리합, ∨)
 
 - 두 명제 중 하나 이상이 참이면 전체가 참. **또는 (OR)** 을 의미
+    
+    - 아래는 예시이다 
+    - p = “나는 집에 있다.”
+    - q = “비가 온다.”
+    - p ∨ q = “나는 집에 있거나 비가 온다.”  
 
 ![System Resources](../../images/Discrete%20Structures%20images/disjunction.png)
 
