--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -91,3 +91,34 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/disjunction.png)
 
+<br/>
+
+### XOR (배타적 OR)
+
+- **XOR : **정확히 하나만 참일 때 참**
+
+- 영어에서 "or(또는)"는 두 가지 의미가 존재한다
+  
+     - **포괄적 OR** : “CS202 또는 Math120을 들은 학생은 이 수업을 들을 수 있다”는 의미는, 두 과목 중 하나만 들어도 되고, 둘 다 들어도 가능 -> 이것이 **논리합(∨)**
+ 
+     - **배타적 OR (XOR)** : “이 요리에 스프 또는 샐러드가 나온다”라고 하면, 스프와 샐러드를 동시에 주지는 않는다는 뜻
+ 
+     
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
