--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -104,7 +104,7 @@
      - **배타적 OR (XOR)** : “이 요리에 스프 또는 샐러드가 나온다”라고 하면, 스프와 샐러드를 동시에 주지는 않는다는 뜻
  
      
- 
+![System Resources](../../images/Discrete%20Structures%20images/XOR.png) 
 
 
 
