--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -106,6 +106,18 @@
      
 ![System Resources](../../images/Discrete%20Structures%20images/XOR.png) 
 
+<br/>
+
+### Implication (→) : 함의
+
+- **함의** : p와 q가 명제일 때, p → q는 조건문(implication, 함축)이라 함.
+   
+    - "만약 p라면, q이다" 라고 읽음
+    - 쉽게 말해서 약속을 어기는 경우만 거짓
+    - 예시
+    - 비가 오면 우산을 쓰겠다”에서 비가 왔는데(참) 우산을 안 쓴다면(거짓) → 조건 위반(거짓).
+    - 비가 안 오면(거짓) → 약속과 무관하므로 참으로 처리
+
 
 
 
