--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -119,6 +119,26 @@
     - 비가 안 오면(거짓) → 약속과 무관하므로 참으로 처리
 
 
+- Implication(함의)에서는 현실적으로 말이 안 돼도 논리학에서는 진리표만 보고 참/거짓을 결정함
+   
+    - p → q의 의미는 오직 p와 q의 참/거짓 값에만 달려 있다
+
+- 함의를 표현하는 다른 방법
+     - if p, then q  
+     - if p, q  
+     - q unless ¬p  
+     - q if p  
+     - q whenever p  
+     - q follows from p  
+
+     - p implies q  
+     - p only if q  
+     - q when p  
+     - p is sufficient for q  
+     - q is necessary for p  
+
+     - a necessary condition for p is q  
+     - a sufficient condition for q is p  
 
 
 
