--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -155,11 +155,15 @@
     - “내가 마을에 가지 않으면, 비가 온다.”
     - (전제/결론 순서를 바꾼 것)
 
-    - Inverse (이): If it is not raining, then I will go to town.
+    <br/>
+    
+    - **Inverse (이)**: If it is not raining, then I will go to town.
     - “비가 오지 않으면, 나는 마을에 간다.”
     - (둘 다 부정)
 
-    - Contrapositive (대우): If I go to town, then it is not raining.
+    <br/>
+    
+    - **Contrapositive (대우)**: If I go to town, then it is not raining.
     - “내가 마을에 가면, 비가 오지 않는다.”
     - (둘 다 부정 + 순서 바꿈 → 원래 명제와 동치) 
  
