--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -56,6 +56,19 @@
 
 <br/>
 
+### 명제 기호를 배우는 이유 (시험 x)
+
+- 컴퓨터는 결국 **0과 1(참/거짓)** 으로만 사고
+    - 논리 기호는 바로 **불 대수(Boolean Algebra)** 와 연결되어, 프로그래밍/알고리즘/회로 설계의 기초가 됨
+
+- 명확한 표현을 위함
+    - 자연어(한국어/영어)는 모호할 수 있
+    - ex: "비가 오면 길이 젖는다" 라는 문장은 말로하면 헷갈릴 여지가 있지만, p → q라고 쓰면 해석이 정확해짐
+ 
+- 정리하면 논리 기호는 수학적 언어이자, 컴퓨터/회로/프로그래밍에서 직접 쓰이는 실질적인 도구이기 때문에 필요함
+
+<br/>
+
 ### Negation (¬) : 부정
 
 - 명제 p의 부정은 ¬p로 표시함
