--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -180,7 +180,14 @@
     - “내가 마을에 가면, 비가 오지 않는다.”
     - (둘 다 부정 + 순서 바꿈 → 원래 명제와 동치) 
  
+<br/>
 
+### Converse (역), Inverse (이), Contrapositive (대우)의 필요성 
+
+- **증명이나 추론 과정에서 활용**하기 위함
+
+- 원래 명제: “비가 오면 길이 젖는다.” (p → q) 가 존재할 때
+    - Converse (역)를 해주면, “길이 젖으면 비가 온다.”가 되고, 이 경우 물 뿌려서 길이 젖은 것일 수도 있기 때문에 반례를 찾기 쉬움
 
 
 
