--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -188,7 +188,7 @@
 
 - 원래 명제: “비가 오면 길이 젖는다.” (p → q) 가 존재할 때
     - Converse (역)를 해주면, “길이 젖으면 비가 온다.”가 되고, 이 경우 물 뿌려서 길이 젖은 것일 수도 있기 때문에 반례를 찾기 쉬움
-
+    - Inverse (이), Contrapositive (대우)를 같이 사용하며 반례를 찾기 위함임
 
 
 
