--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -190,7 +190,16 @@
     - Converse (역)를 해주면, “길이 젖으면 비가 온다.”가 되고, 이 경우 물 뿌려서 길이 젖은 것일 수도 있기 때문에 반례를 찾기 쉬움
     - Inverse (이), Contrapositive (대우)를 같이 사용하며 반례를 찾기 위함임
 
+<br/>
 
+### Biconditional (↔) : 쌍조건문
+
+- **Biconditional (↔)** : p와 q가 같을 때 참, 다를 때 거짓
+    
+    - 예시
+    - p = “나는 집에 있다.”
+    - q = “비가 온다.”
+    - p ↔ q = “나는 집에 있을 때, 그리고 오직 그때에만 비가 온다.” 
 
 
 
