--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -201,7 +201,7 @@
     - q = “비가 온다.”
     - p ↔ q = “나는 집에 있을 때, 그리고 오직 그때에만 비가 온다.” 
 
-
+![System Resources](../../images/Discrete%20Structures%20images/biconditional.png)
 
 
 
