--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -195,6 +195,9 @@
 ### Biconditional (↔) : 쌍조건문
 
 - **Biconditional (↔)** : p와 q가 같을 때 참, 다를 때 거짓
+   
+    - p는 q의 필요충분조건이다.
+    - p → q이고 동시에 q → p이다. 
     
     - 예시
     - p = “나는 집에 있다.”
