--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -206,7 +206,23 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/biconditional.png)
 
+<br/>
 
+### 진리표 생성 방법 
+
+- **진리표** : 처음부터 끝까지 계산 과정 전부를 정리해 보여주는 표
+
+- 행(Row): 가능한 모든 경우(참/거짓 조합)를 나열.
+
+    - 명제 개수가 n개라면 2ⁿ개의 행 필요.
+
+- 열(Column):
+
+    - 기본 명제(p, q …)
+
+    - 중간 계산식 (예: ¬p, p ∨ q 등)
+
+    - 최종 복합 명제 (보통 맨 오른쪽)
 
 
 
