--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -227,3 +227,17 @@
 - 예시는 다음과 같다
 
 ![System Resources](../../images/Discrete%20Structures%20images/진리표예시.png)
+
+- 또 다른 예시로 진리표를 이용해 조건문(p → q)이 그 대우(¬q → ¬p)와 동치임을 보이려면 다음과 같이 진리표를 작성하면 된다
+
+![System Resources](../../images/Discrete%20Structures%20images/진리표예시2.png)
+
+
+
+
+
+
+
+
+
+
