--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -236,7 +236,11 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/진리표예시3.png)
 
+<br/>
 
+### 연산자 우선순위 
+
+![System Resources](../../images/Discrete%20Structures%20images/연산자우선순위.png)
 
 
 
