--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -242,7 +242,8 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/연산자우선순위.png)
 
-
+- ex: p ∨ q → ¬r는 (p ∨ q) → ¬r와 동치이다
+    - 만약 의도한 의미가 p ∨ (q → ¬r*라면 **반드시 괄호를 사용해야 한다**
 
 
 
