--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -246,6 +246,72 @@
   
     - 만약 의도한 의미가 p ∨ (q → ¬r*라면 **반드시 괄호를 사용해야 한다**
 
+<br/>
+
+### Tautology (항진명제), Contradiction (모순), and Contingency (불확정명제)
+
+- **항진명제(tautology)** : 항상 참(True)인 명제
+    
+    - ex : p 또는 ¬p
+    - ex : 비가 오거나 비가 오지 않는다
+
+- **모순(contradiction)** : 항상 거짓(False)인 명제
+
+    - ex: p 그리고 ¬p
+ 
+    - ex : 비가 오고, 동시에 비가 오지 않는다
+
+- **불확정명제(contingency)** : 항상 참도 아니고, 항상 거짓도 아닌 명제
+
+    - ex : 그냥 p 자체
+    - ex : 오늘 비가 온다. → 상황에 따라 참/거짓 달라짐
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
