--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -266,7 +266,7 @@
     - ex : 오늘 비가 온다. → 상황에 따라 참/거짓 달라짐
 
 
-
+![System Resources](../../images/Discrete%20Structures%20images/명제종류진리표.png)
 
 
 
