--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -268,9 +268,14 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/명제종류진리표.png)
 
+<br/>
 
+### Logical Equivalence (논리적 동치)
 
-
+- **Logical Equivalence (논리적 동치)** : 두 복합 명제 p와 q가 항상 같은 진리값을 가지면, 즉 p ↔ q가 항진명제(항상 참)이면, p와 q는 논리적으로 동치이다
+    - 이를 기호로는 **p ⇔ q** 또는 **p ≡ q**라고 쓴다
+ 
+![System Resources](../../images/Discrete%20Structures%20images/논리적동치예시.png)
 
 
 
