--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -276,6 +276,14 @@
 
     - 이를 기호로는 **p ⇔ q** 또는 **p ≡ q**라고 쓴다
 
+- 주의할 점은 ⇔ 과 ↔ 은 비슷하지만 다른 개념이다
+
+    - **Biconditional (↔)** : **특정 상황**에서 같을 수도, 다를 수도 있음
+ 
+    - **Logical Equivalence (⇔)** : **항상** 두 식이 동일한 값을 가지므로 같은 명제
+ 
+    - 즉, 쌍조건문(↔)에서 모든 값이 동일하면, 논리적 동치 (⇔)가 됨
+
 아래 예시를 보자 
 
 ![System Resources](../../images/Discrete%20Structures%20images/논리적동치예시.png)
