--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -294,8 +294,11 @@
    
     - 따라서 p → q ≡ ¬p ∨ q이다
 
+<br/>
 
+### 드모르간 
 
+![System Resources](../../images/Discrete%20Structures%20images/드모르간.png)
 
 
 
