--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -300,7 +300,10 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/드모르간.png)
 
-
+- 예시
+  
+    - 나는 공부와 운동 둘 다 하지는 않고 둘 중 하나만 하거나, 둘 다 안 한다 : ¬(공부 ∧ 운동)
+    - 나는 공부를 안 하거나, 운동을 안 한다 : ¬공부 ∨ ¬운동 
 
 
 
