--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -303,10 +303,27 @@
 - 예시
   
     - 나는 공부와 운동 둘 다 하지는 않고 둘 중 하나만 하거나, 둘 다 안 한다 : ¬(공부 ∧ 운동)
+   
     - 나는 공부를 안 하거나, 운동을 안 한다 : ¬공부 ∨ ¬운동 
 
 
+<br/>
 
+### 추가적인 연산의 기본 법칙 
+
+- 추가적인 연산의 기본 법칙
+  
+    - 항등 법칙: 참/거짓을 붙여도 본래 값 유지.
+
+    - 지배 법칙: 참/거짓이 전체를 지배.
+
+    - 멱등 법칙: 같은 걸 두 번 써도 하나랑 같다.
+
+    - 이중 부정 법칙: 두 번 부정하면 원래대로.
+
+    - 부정 법칙: p와 ¬p는 항상 참이거나 거짓 
+
+![System Resources](../../images/Discrete%20Structures%20images/추가법칙.png)
 
 
 
