--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -313,20 +313,27 @@
 
 - 추가적인 연산의 기본 법칙
   
-    - 항등 법칙: 참/거짓을 붙여도 본래 값 유지.
+    - Identity Laws (항등 법칙): 참/거짓을 붙여도 본래 값 유지
 
-    - 지배 법칙: 참/거짓이 전체를 지배.
+    - Domination Laws (지배 법칙): 참/거짓이 전체를 지배
 
-    - 멱등 법칙: 같은 걸 두 번 써도 하나랑 같다.
+    - Idempotent Laws (멱등 법칙): 같은 걸 두 번 써도 하나랑 같다
 
-    - 이중 부정 법칙: 두 번 부정하면 원래대로.
+    - Double Negation Law (이중 부정 법칙): 두 번 부정하면 원래대로
 
-    - 부정 법칙: p와 ¬p는 항상 참이거나 거짓 
+    - Negation Laws (부정 법칙): p와 ¬p는 항상 참이거나 거짓
+ 
+    - Commutative Laws (교환 법칙) : 순서 바꿔도 같다
+ 
+    - Associative Laws (결합 법칙) : 괄호 위치를 바꿔도 결과가 같다
+ 
+    - Distributive Laws (분배 법칙) :  AND와 OR는 곱셈/덧셈처럼 서로 분배된다
+ 
+    - Absorption Laws (흡수 법칙) : p 또는 (p AND q)는 결국 그냥 p와 같다
 
 ![System Resources](../../images/Discrete%20Structures%20images/추가법칙.png)
 
-
-
+![System Resources](../../images/Discrete%20Structures%20images/추가법칙2.png)
 
 
 
