--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -337,8 +337,13 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/추가법칙2.png)
 
+<br/>
 
+### 함의 변경 과정 
 
+![System Resources](../../images/Discrete%20Structures%20images/함의변경1.png)
+
+![System Resources](../../images/Discrete%20Structures%20images/함의변경2.png)
 
 
 
