--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -345,8 +345,23 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/함의변경2.png)
 
+<br/>
 
+### 함의 변경 과정 식 풀이 
 
+**1. p↔q≡(p∧q)∨(¬p∧¬q) 증명**
+
+- p ↔ q ≡ (p → q)∧(q → p) : 쌍조건 정의 사용
+
+- ≡ (¬p ∨ q) ∧ (¬q ∨ p) : 조건문 변환 (p → q ≡ ¬p ∨ q)
+
+- ≡ (¬p ∨ q) ∧ (¬q ∨ p) : **분배법칙 사용** -> 여기서 중요
+    
+    - 위 식을 분배법칙을 이용해서 정리하면 다음과 같다
+ 
+    - ≡ (¬p ∧ ¬q) ∨ (¬p ∧ p) ∨ (q ∧ ¬q) ∨ (q ∧ p)
+ 
+    - 
 
 
 
