--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -359,9 +359,9 @@
     
     - 위 식을 분배법칙을 이용해서 정리하면 다음과 같다
  
-    - ≡ (¬p ∧ ¬q) ∨ (¬p ∧ p) ∨ (q ∧ ¬q) ∨ (q ∧ p)
+    - ≡ (((¬p ∧ (¬q ∨ p)) ∨ (q ∧ (¬q∨p))) : 여기서 각각 한번씩 분배법칙을 또 해야함. 즉 크게 한번, 작게 2번
  
-    - 
+    - ≡ (¬p ∧ ¬q) ∨ (¬p ∧ p)
 
 
 
