--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -349,7 +349,7 @@
 
 ### 함의 변경 과정 식 풀이 (나머지도 하나씩 해보기)
 
-**1. p↔q≡(p∧q)∨(¬p∧¬q) 증명**
+**1. p ↔ q ≡ (p ∧ q) ∨ (¬p ∧ ¬q) 증명**
 
 - p ↔ q ≡ (p → q)∧(q → p) : 쌍조건 정의 사용
 
@@ -367,7 +367,17 @@
 
 - 최종적으로 (¬p ∨ q) ∧ (¬q ∨ p) ≡ (p ∧ q) ∨ (¬p ∧ ¬q) 증명가능 
 
+<br/>
 
+**2. ¬(p ∨ (¬p ∧ q)) ≡ ¬p ∧ ¬q 증명**
+
+- ¬(p ∨ (¬p ∧ q)) ≡ ¬p ∧ ¬(¬p ∧ q) : 드모르간 법칙
+
+- ≡ ¬p ∧ [¬(¬p) ∨ ¬q] ≡ ¬p ∧ (p ∨ ¬q) : 이중 부정 법칙
+
+    - **여기서 중요한 점**은 드모르간으로 인해  (p ∨ ¬q) 앞에 부정(¬)이 오고 오고 분배해줄 때 **괄호를 없애면 안 됨**
+ 
+    - 즉, ¬p ∧ [¬(¬p) ∨ ¬q] 에서 부정(¬)을 분배했을 때 ¬p ∧ p ∨ ¬q 와 같이 **괄호를 빼면 틀림**
 
 
 
