--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -378,8 +378,14 @@
     - **여기서 중요한 점**은 드모르간으로 인해  (p ∨ ¬q) 앞에 부정(¬)이 오고 오고 분배해줄 때 **괄호를 없애면 안 됨**
  
     - 즉, ¬p ∧ [¬(¬p) ∨ ¬q] 에서 부정(¬)을 분배했을 때 ¬p ∧ p ∨ ¬q 와 같이 **괄호를 빼면 틀림**
+ 
+    - 괄호는 정해진 순서이기 때문에 순서를 어기는 것이 됨 
 
+- ≡ (¬p ∧ p) ∨ (¬p ∧ ¬q) : 분배 법칙
 
+- ≡ F ∨ (¬p ∧ ¬q)
+
+- ≡ ¬p ∧ ¬q
 
 
 
