--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -385,8 +385,23 @@
 
 - ≡ F ∨ (¬p ∧ ¬q)
 
-- ≡ ¬p ∧ ¬q
+- ≡ ¬p ∧ ¬q 증명완료
 
+<br/>
+
+**3. (p ∧ q) → (p ∨ q)”가 항진명제(항상 참인 명제)임을 보여라**
+
+- (p ∧ q) → (p ∨ q) ≡ ¬(p ∧ q) ∨ (p ∨ q) : 조건문의 정의
+
+- ≡ (¬p ∨ ¬q) ∨ (p ∨ q) : 드모르간 법칙
+
+- ≡ (¬p ∨ p) ∨ (¬q ∨ q) : 결합법칙/교환법칙
+
+    - **우선순위가 동일한 연산자만 존재한다면, 괄호가 없어도 무방함**
+ 
+    - 우선순위가 다를 경우에는 괄호는 제거하면 안됨 
+ 
+- ≡ T ∨ T 이므로 증명 완료 
 
 
 
