--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -403,6 +403,21 @@
  
 - ≡ T ∨ T 이므로 증명 완료 
 
+<br/>
+
+### satisfiable (만족 가능), unsatisfiable (만족 불가능)
+
+- **만족 가능 (satisfiable)**: 변수들에 참/거짓 값을 적절히 할당했을 때 전체 명제가 참이 되는 경우가 존재
+
+    - 즉, **만족가능한 하나의 경우라도 찾으면 satisfiable함**
+ 
+    - ex: (p∨¬q)∧(q∨¬r)∧(r∨¬p)가 satisfiable한지 판별하라
+ 
+    - p = T, q = T, r = T로 놓으면 전체 식이 참이 된다
+
+<br/>
+
+- **만족 불가능 (unsatisfiable)**: 그 부정이 항상 참(항진명제)이다
 
 
 
