--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -419,7 +419,9 @@
 
 - **만족 불가능 (unsatisfiable)**: 그 부정이 항상 참(항진명제)이다
 
+아래 예시를 살펴보자 
 
+![System Resources](../../images/Discrete%20Structures%20images/satisfiable.png)
 
 
 
