--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -423,7 +423,7 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/satisfiable.png)
 
-
+(¬p∨¬q∨¬r)가 거짓이고 and 연산자로 연결되어 있기 때문에 만족불가능하다
 
 
 
