--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -4,3 +4,15 @@
 
 - **자연어 처리** : 자연어 처리란 컴퓨터가 자연어를 기반으로 이 세상에 관해 뭔가를 배우고 이해할 수 있도록 자연어를 변환하고 처리하여 활용하는 기술 및 분야
 
+<br/>
+
+### 자연어 처리의 필요성 
+
+- 컴퓨터라는 것 자체가 이미 프로그래밍 언어를 기반으로 동작하지만 자연어는 이와 완전히 다름
+
+    - 프로그래밍 언어는 형식 언어의 일종으로 문법에 근거하여 파싱(parsing)하고 이를 번역 또는 해석이 가능함
+ 
+    - 자연어는 문맥이 중요하기 때문에 **문법에만 근거해서 완전히 해석할 수 없으며**, 문법에도 예외가 존재 ex: "배"라는 말이 과일, 동물, 배(boat) 등 상황에 따라 달라짐
+ 
+    - 자연어의 해석을 위해서는 배경지식이 필요한 경우도 많음 
+  
