--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -16,3 +16,42 @@
  
     - 자연어의 해석을 위해서는 배경지식이 필요한 경우도 많음 
   
+<br/>
+
+### 자연어 처리 발전 과정 
+
+- **초창기**
+
+    - 자연어 처리를 단순한 조건문/반복문, 문자열 매칭을 이용한 **패턴 기반 NLP**로 구현. 즉, 예전 챗봇은 단순 규칙에 따라서만 행동
+ 
+    - 예를 들어, 입력에 “hello” 같은 단어 있으면 → “안녕하세요”라고 답하는 단순 챗봇이였음
+ 
+    - 이것을 정규식으로 사용은 가능, 하지만 패턴 기반 NLP는 특정 상황에서는 작동하지만, **그 외 상황에서는 무력함**
+
+    - 자연어 입력에 대한 의미를 컴퓨터가 파악하도록 하는 데는 무리가 있음 (ex: “배고프다”와 “밥 먹고 싶다”가 같은 뜻이라는 못 알아챔)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
