--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -30,8 +30,22 @@
 
     - 자연어 입력에 대한 의미를 컴퓨터가 파악하도록 하는 데는 무리가 있음 (ex: “배고프다”와 “밥 먹고 싶다”가 같은 뜻이라는 못 알아챔)
 
+<br/>
 
+### 간단한 챗봇 예시 
 
+- 간단한 정규식으로 “hello/hi/hey” 같은 인사말이 입력에 있는지 확인
+
+```ruby
+>>> import re
+>>> r = "(hi|hello|hey)[ ]*([a-z]*)"                                     # hi, hello, hey로 시작하고, 뒤에 공백과 알파벳이 올 수 있는 패턴을 만듦
+>>> re.match(r, 'Hello Rosa', flags=re.IGNORECASE)                       # match : 문자열의 시작 부분부터 위에서 만든 정규식 패턴과 일치하는지 확인하는 함수
+<_sre.SRE_Match object; span=(0, 10), match='Hello Rosa'>                # 현재
+>>> re.match(r, "hi ho, hi ho, it's off to work ...", flags=re.IGNORECASE)
+<_sre.SRE_Match object; span=(0, 5), match='hi ho'>
+>>> re.match(r, "hey, what's up", flags=re.IGNORECASE)
+<_sre.SRE_Match object; span=(0, 3), match='hey'>
+```
 
 
 
