--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -40,7 +40,7 @@
 >>> import re
 >>> r = "(hi|hello|hey)[ ]*([a-z]*)"                                     # hi, hello, hey로 시작하고, 뒤에 공백과 알파벳이 올 수 있는 패턴을 만듦
 >>> re.match(r, 'Hello Rosa', flags=re.IGNORECASE)                       # match : 문자열의 시작 부분부터 위에서 만든 정규식 패턴과 일치하는지 확인하는 함수
-<_sre.SRE_Match object; span=(0, 10), match='Hello Rosa'>                # 현재
+<_sre.SRE_Match object; span=(0, 10), match='Hello Rosa'>                # flags=re.IGNORECASE에 의해 대소문자 구분 x -> Rosa도 r의 규칙에 의해 match 가능
 >>> re.match(r, "hi ho, hi ho, it's off to work ...", flags=re.IGNORECASE)
 <_sre.SRE_Match object; span=(0, 5), match='hi ho'>
 >>> re.match(r, "hey, what's up", flags=re.IGNORECASE)
