--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -47,6 +47,26 @@
 <_sre.SRE_Match object; span=(0, 3), match='hey'>
 ```
 
+<br/>
+
+- 인사말 + 이름까지 매칭 (확장된 정규식)
+
+```ruby
+>>> r = r"[a-z]*(y|o|h)?ello|ok|hey|good[ ]?(morn[gin]{0,3}|afternoon|even[gin]{0,3})[\s,;:]{1,3}([a-z]{1,20})"  # 위 코드에서 r을 인사말과 이름을 감지할 수 있는 최소 패턴을 만든 것이고, 해당 r은 이것을 확장한 것 
+>>> re_greeting = re.compile(r, flags=re.IGNORECASE)
+
+>>> re_greeting.match("Hello Rosa")
+<_sre.SRE_Match object; span=(0, 10), match='Hello Rosa'>
+
+>>> re_greeting.match("Good morning Rosa")
+<_sre.SRE_Match object; span=(0, 17), match='Good morning Rosa'>
+
+>>> re_greeting.match("Good evening Rosa Parks").groups()
+('Good evening', 'Rosa')
+
+>>> re_greeting.match("yo Rosa")
+<_sre.SRE_Match object; span=(0, 7), match='yo Rosa'>
+```
 
 
 
