--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -53,9 +53,9 @@
 
 ```ruby
 >>> r = r"[a-z]*(y|o|h)?ello|ok|hey|good[ ]?(morn[gin]{0,3}|afternoon|even[gin]{0,3})[\s,;:]{1,3}([a-z]{1,20})"  # 위 코드에서 r을 인사말과 이름을 감지할 수 있는 최소 패턴을 만든 것이고, 해당 r은 이것을 확장한 것 
->>> re_greeting = re.compile(r, flags=re.IGNORECASE)
+>>> re_greeting = re.compile(r, flags=re.IGNORECASE)      # compile : 같은 정규식을 매번 해석하지 않고, 미리 번역된(컴파일된) 형태를 재사용이 가능함
 
->>> re_greeting.match("Hello Rosa")
+>>> re_greeting.match("Hello Rosa")    # complie을 이용했기 때문에 ' re.match(r, 'Hello Rosa', flags=re.IGNORECASE)' 로 길게 쓰지 않고 간단한 코드 작성이 가능
 <_sre.SRE_Match object; span=(0, 10), match='Hello Rosa'>
 
 >>> re_greeting.match("Good morning Rosa")
