--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -68,7 +68,23 @@
 <_sre.SRE_Match object; span=(0, 7), match='yo Rosa'>
 ```
 
+<br/>
 
+- if문으로 정중/무례 여부에 따라 응답이 다르게 함
+  
+```ruby
+>>> my_names = set(['rosa', 'rose', 'chatty', 'chatbot', 'bot', 'chatterbot'])
+>>> curt_names = set(['hal', 'you', 'u'])
+>>> greeter_name = ''
+>>> match = re_greeting.match(input())
+
+>>> if match:
+...     at_name = match.groups()[-1]
+...     if at_name in curt_names:
+...         print("Good one.")
+...     elif at_name.lower() in my_names:
+...         print("Hi {}, How are you?".format(greeter_name))
+```
 
 
 
