--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -86,7 +86,7 @@
 ...         print("Hi {}, How are you?".format(greeter_name))
 ```
 
-이런식으로 만들었음 
+아래는 위와 같은 패턴기반NLP를 이용해서 1966년에 만들어진 규칙 기반 챗봇 ELIZA의 대화 예시이다
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/패턴기반NLP예시.png)
 
