--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -24,15 +24,24 @@
 
     - 자연어 처리를 단순한 조건문/반복문, 문자열 매칭을 이용한 **패턴 기반 NLP**로 구현. 즉, 예전 챗봇은 단순 규칙에 따라서만 행동
  
-    - 예를 들어, 입력에 “hello” 같은 단어 있으면 → “안녕하세요”라고 답하는 단순 챗봇이였음
+    - 예를 들어, 입력에 “hello” 같은 단어 있으면 → “안녕하세요”라고 답하는 **단순 챗봇**이였음
  
-    - 이것을 정규식으로 사용은 가능, 하지만 패턴 기반 NLP는 특정 상황에서는 작동하지만, **그 외 상황에서는 무력함**
+    - 이것을 정규식으로 사용은 가능, 하지만 패턴 기반 NLP는 특정 상황에서는 작동하지만, **그 외 상황에서는 무력함** 
 
-    - 자연어 입력에 대한 의미를 컴퓨터가 파악하도록 하는 데는 무리가 있음 (ex: “배고프다”와 “밥 먹고 싶다”가 같은 뜻이라는 못 알아챔)
+    - 자연어 입력에 대한 의미를 컴퓨터가 파악하도록 하는 데는 **무리가 있음** (ex: “배고프다”와 “밥 먹고 싶다”가 같은 뜻이라는 못 알아챔)
+ 
+    - 기초적인 패턴 기반 접근 방식은 **오타를 걸러낼 수 없고**, 다양한 축약어 등을 모두 표현하려면 많은 노력이 필요
 
 <br/>
 
-### 간단한 챗봇 예시 
+- **아이디어**
+
+    -  유용한 자연어 처리를 위해서는 단순히 문자열의 패턴을 매칭하는 것이 아니라 **문자열의 의미를 기반**으로 매칭 혹은 해석이 가능해야 함
+ 
+    - 표음문자의 경우 보통 단어 단위로 의미를 내포 -> 문자열을 문자 단위가 아니라 **단어 단위로 해석**하게 된다면 보다 의미 분석을 수월하게 할 수 있을 것이라고 추측함
+<br/>
+
+### 초창기 간단한 챗봇 예시 
 
 - 간단한 정규식으로 “hello/hi/hey” 같은 인사말이 입력에 있는지 확인
 
