--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -39,6 +39,11 @@
     -  유용한 자연어 처리를 위해서는 단순히 문자열의 패턴을 매칭하는 것이 아니라 **문자열의 의미를 기반**으로 매칭 혹은 해석이 가능해야 함
  
     - 표음문자의 경우 보통 단어 단위로 의미를 내포 -> 문자열을 문자 단위가 아니라 **단어 단위로 해석**하게 된다면 보다 의미 분석을 수월하게 할 수 있을 것이라고 추측함
+    
+    - 즉, "Hello" → 'H', 'e', 'l', 'l', 'o' 로 분석하는게 아니라, hello **그 자체로 의미를 학습**하게 하자는 것
+ 
+    - 분석 결과를 **벡터**로 나타낼 수 있다면 벡터 공간에서의 연산을 통해 **다양한 작업을 수행 가능** -> 기계학습을 활용하기에도 좋음
+      
 <br/>
 
 ### 초창기 간단한 챗봇 예시 
