--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -43,6 +43,8 @@
     - 즉, "Hello" → 'H', 'e', 'l', 'l', 'o' 로 분석하는게 아니라, hello **그 자체로 의미를 학습**하게 하자는 것
  
     - 분석 결과를 **벡터**로 나타낼 수 있다면 벡터 공간에서의 연산을 통해 **다양한 작업을 수행 가능** -> 기계학습을 활용하기에도 좋음
+ 
+    - **Bag-of-Words가 등장함**
       
 <br/>
 
