--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -106,7 +106,13 @@
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/패턴기반NLP예시.png)
 
+<br/>
 
+### Bag-of-words
+
+- **Bag-of-words**
+
+    - 주어진 문장의 의미를 벡터로 나타내기 위해 **유의미한 단어들의 등장 횟수**를 벡터 내의 각 자릿수로 활용하는 방식
 
 
 
