--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -112,7 +112,10 @@
 
 - **Bag-of-words**
 
-    - 주어진 문장의 의미를 벡터로 나타내기 위해 **유의미한 단어들의 등장 횟수**를 벡터 내의 각 자릿수로 활용하는 방식
+    - 주어진 문장의 의미를 벡터로 나타내기 위해 **유의미한 단어들의 등장 횟수**를 벡터 내의 각 **자릿수**로 활용하는 방식
+   
+    - ex: “A bat and a rat..." 와 같은 문장이 나오면, A, a, and와 같은 **불용어를 제외**하고, 의미있는 단어인 bat과 rat을 카운트해서 **벡터로 변환**
+    
 
 
 
