--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -2,16 +2,16 @@
 
 - **인공지능(ArtificialIntelligence)**
 
-    - 사람처럼 느끼고(sense) 추론하고(reason) 행동하는(act) 컴퓨터 프로그램
+    - 사람처럼 **느끼고(sense) 추론하고(reason) 행동하는(act)** 컴퓨터 프로그램
 
 - **머신러닝(MachineLearning)**
 
-    - 데이터로부터 패턴을 학습하는 방식의 컴퓨터프로그램
+    - 데이터로부터 **스스로 규칙을 학습**하는 방식의 컴퓨터프로그램
 
     - 인공지능을 구현하는 한 방법
 
 - **딥러닝(DeepLearning)**
 
-    - 인간 뇌의 신경망을 모사하는 방식의 머신러닝
+    - **인간 뇌의 신경망을 모사**하는 방식의 머신러닝
     
     - 머신러닝의 한 종류
