--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -1,5 +1,9 @@
 ### 인공지능 개념 정리 
 
+- **지능(Intelligence)** 
+
+    - 어떤 사물이나 현상을 받아들이고 생각하는 능력
+    
 - **인공지능(ArtificialIntelligence)**
 
     - 사람처럼 **느끼고(sense) 추론하고(reason) 행동하는(act)** 컴퓨터 프로그램
@@ -15,3 +19,8 @@
     - **인간 뇌의 신경망을 모사**하는 방식의 머신러닝
     
     - 머신러닝의 한 종류
+
+<br/>
+
+### 확률의 필요성 
+
