--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -24,5 +24,5 @@
 
 ### 확률의 필요성 
 
-![System Resources](../../images/Probability%20Theory%20for%20AI%20images/객체인지_예시.png)
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률의필요성예시.png)
 
