--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -22,7 +22,7 @@
 
 <br/>
 
-### 확률의 필요성 
+### 확률의 필요성 (여기부터 다시 공부)
 
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률의필요성예시.png)
 
