--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -22,7 +22,10 @@
 
 <br/>
 
-### 확률의 필요성 (여기부터 다시 공부)
+### 확률의 필요성 
 
+- 인공지능도 결국 확률을 계산함
+
+    - 해당 이미지가 개일 확률과 고양이일 확률을 비교하여 계산함      
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률의필요성예시.png)
 
