--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -29,3 +29,5 @@
     - 해당 이미지가 개일 확률과 고양이일 확률을 비교하여 계산함      
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률의필요성예시.png)
 
+- 현실 세계는 불확실하다
+
