--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -31,3 +31,26 @@
 
 - 현실 세계는 불확실하다
 
+    - 100% 확실한 예측은 불가능. 따라서 확률 분포로 표현하는 게 합리적
+ 
+- 확률 분포는 연속적이고 미분 가능하다
+
+    - 학습(최적화)을 위해선 수학적으로 미분할 수 있는 구조가 필요
+ 
+    - 이산적(yes/no) 결정보다 확률 분포 위에서 loss를 계산하는 게 유리함
+ 
+- 학습은 확률 분포를 근사하는 과정
+
+    - AI가 배우는 건 “정답 하나”가 아니라, “정답일 가능성이 가장 높은 확률 분포”를 찾는 것임
+ 
+- 의사 결정, 예측, 생성 모두 확률을 기반이다
+
+    - 생성 모델은 샘플링을 통해 새로운 데이터를 만든다
+
+    - 분류 모델은 softmax 확률 출력을 낸다
+
+    - 강화 학습에서는 행동 정책(policy)이 행동 확률 분포다
+ 
+    - AI가 무언가를 만들거나(생성), 분류하거나, 행동할 때 모두 확률에 따라 움직인다
+
+
