--- a/Probability Theory for AI/Probability Theory for AI study/01장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/01장.md
@@ -20,6 +20,10 @@
     
     - 머신러닝의 한 종류
 
+- **확률(Probability)**
+
+    - 확률은 **불확실성을 표현하는 수학적 언어**이자 딥러닝의 학습과 추론이 가능하도록 하는 틀
+      
 <br/>
 
 ### 확률의 필요성 
