--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -22,7 +22,11 @@
 
 - **초창기**
 
-    - 자연어 처리를 단순한 조건문/반복문, 문자열 매칭을 이용한 **패턴 기반 NLP**로 구현. 즉, 예전 챗봇은 단순 규칙에 따라서만 행동
+    - 1950~60년대부터 “컴퓨터가 텍스트 문서를 이해할 수 없을까?”라는 연구가 시작
+ 
+    -  컴퓨터는 숫자만 계산할 수 있으니, 텍스트를 숫자로 바꿀 방법
+
+    - 자연어 처리를 단순한 조건문/반복문, 문자열 매칭을 이용한 **패턴 기반 NLP**로 구현함. 즉, 예전 챗봇은 단순 규칙에 따라서만 행동
  
     - 예를 들어, 입력에 “hello” 같은 단어 있으면 → “안녕하세요”라고 답하는 **단순 챗봇**이였음
  
