--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -47,6 +47,16 @@
     - 분석 결과를 **벡터**로 나타낼 수 있다면 벡터 공간에서의 연산을 통해 **다양한 작업을 수행 가능** -> 기계학습을 활용하기에도 좋음
  
     - **Bag-of-Words가 등장함**
+
+<br/>
+
+- **Bag-of-Words 역사**
+
+    - 초창기에는 문서 검색에 사용 : 검색어를 입력 -> 많은 문서 중에서 관련 있는 문서를 찾아주는 것
+ 
+    - 이후 문서 분류에 사용 : 스포츠, 정치, 경제 등등을 분류
+ 
+    - 2000년대부터는 스펨 필터와 감성 분석에 사용 : 스펨 판단 및 영화 리뷰 긍/부정 분류
       
 <br/>
 
