--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -127,6 +127,10 @@
     - 주어진 문장의 의미를 벡터로 나타내기 위해 **유의미한 단어들의 등장 횟수**를 벡터 내의 각 **자릿수**로 활용하는 방식
    
     - ex: “A bat and a rat..." 와 같은 문장이 나오면, A, a, and와 같은 **불용어를 제외**하고, 의미있는 단어인 bat과 rat을 카운트해서 **벡터로 변환**
+ 
+    - **단점** : 단어들의 순서 및 문법 정보를 손상시킴 (짧은 문장은 괜찮게 동작, 하지만 긴 문장에서는 성능이 안 좋음)
+ 
+    - ex : “개가 사람을 물었다” vs “사람이 개를 물었다” 를 보고 개와 사람과 관련이 있는 문장이라고만 파악 가능 -> 즉, 둘 다 동일한 주제를 가졌구나만 알 수 있다 
     
 <br/>
 
