--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -134,7 +134,53 @@
     
 <br/>
 
-## p.11부터 
+### 매우 단순한 bag-of-words 구현 예시
+
+- BoW (단어 빈도 세기)
+  
+```ruby
+from collections import Counter                 # Counter : 단어 빈도수를 세는 라이브러리 
+
+Counter("Guten Morgen Rosa".split())
+# 결과: Counter({'Guten': 1, 'Rosa': 1, 'Morgen': 1})
+
+Counter("Good morning, Rosa!".split())
+# 결과: Counter({'Good': 1, 'morning,': 1, 'Rosa!': 1})
+``` 
+
+<br/>
+
+- 단어 순서가 바뀌면 문장이 여러 개로 변함
+  
+```ruby
+from itertools import permutations     # 파이썬의 조합/순열 라이브러리
+
+[" ".join(combo) for combo in permutations("Good morning Rosa!".split(), 3)]  # 순열 튜플을 다시 문자열로 합침
+# 결과:                                                                       # 예: ('Good','Rosa!','morning') → "Good Rosa! morning".
+# ['Good morning Rosa!',
+#  'Good Rosa! morning',
+#  'morning Good Rosa!',
+#  'morning Rosa! Good',
+#  'Rosa! Good morning',
+#  'Rosa! morning Good']
+``` 
+
+<br/>
+
+- 문장이 길어지면 단어 순서 경우의 수가 팩토리얼로 폭증
+  
+```ruby
+s = """Find textbooks with titles containing 'NLP',
+or 'natural' and 'language', or
+'computational' and 'linguistics'."""
+
+len(set(s.split()))
+# 결과: 12
+
+import numpy as np
+np.arange(1, 12 + 1).prod()  # factorial(12)
+# 결과: 479001600
+```
 
 
 
