--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -168,6 +168,8 @@ from itertools import permutations     # 파이썬의 조합/순열 라이브러
 <br/>
 
 - 문장이 길어지면 단어 순서 경우의 수가 팩토리얼로 폭증
+
+    - 즉, BoW는 순서를 학습하지 못하므로, 정확한 뜻을 예측하기 어렵다는 것을 보여줌 
   
 ```ruby
 s = """Find textbooks with titles containing 'NLP',
