--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -188,7 +188,11 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
 ### bag-of-words 초기 극복 아이디어 
 
+- **구문 트리** 사용
 
+    -  문장의 **문법적 구조(syntactic structure)** 를 표현하는 도구
+ 
+- 구문 트리 예시 
 
 
 
