--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -194,6 +194,7 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
  
 - 구문 트리 예시 
 
+![System Resources](../../images/Natural%20Language%20Processing%20images/구문트리예시.png)
 
 
 
