--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -192,6 +192,12 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
     -  문장의 **문법적 구조(syntactic structure)** 를 표현하는 도구
  
+    -  초기에는 사람이 직접 문법 규칙을 일일이 작성.
+
+    - ex : “-다”로 끝나면 동사일 확률이 높다
+
+    - ex : “-에/에서/으로” 뒤에 오는 건 명사일 확률이 높다
+ 
 - 구문 트리 예시 
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/구문트리예시.png)
