--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -202,7 +202,21 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/구문트리예시.png)
 
+<br/>
 
+### 구문 트리를 이용한 NLP 파이프라인 
+
+- **파이프라인** : 일련의 처리 과정이 순차적으로 이어진 것
+
+- 챗봇에 대한 NLP 파이프라인 예시
+    
+    - 파싱: 특징 및 수치 자료 추출 -> 입력 문장에서 필요한 정보(단어, 품사 등)를 뽑음
+   
+    - 분석: 특징 추가 생성 및 결합 -> 뽑아낸 정보를 조합해서 더 의미 있는 표현을 만듦
+   
+    - 생성: 응답문 작성 -> 챗봇이 대답할 문장을 만듦
+
+    - 실행: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
 
 
 
