--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -218,7 +218,13 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
     - 실행: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
 
+<br/>
 
+- ex 사용자 입력: "오늘 서울 날씨 알려줘"
+
+    -  파싱 : 토큰화 → ["오늘", "서울", "날씨", "알려줘"] 후 품사 태깅 → 오늘(Noun), 서울(ProperNoun), 날씨(Noun), 알려줘(Verb)
+ 
+        - **구문 트리를 사용**해서 품사를 태깅함  
 
 
 
