--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -210,23 +210,41 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
 - 챗봇에 대한 NLP 파이프라인 예시
     
-    - 파싱: 특징 및 수치 자료 추출 -> 입력 문장에서 필요한 정보(단어, 품사 등)를 뽑음
+    - **파싱**: 특징 및 수치 자료 추출 -> 입력 문장에서 필요한 정보(단어, 품사 등)를 뽑음
    
-    - 분석: 특징 추가 생성 및 결합 -> 뽑아낸 정보를 조합해서 더 의미 있는 표현을 만듦
+    - **분석**: 특징 추가 생성 및 결합 -> 뽑아낸 정보를 조합해서 더 의미 있는 표현을 만듦
    
-    - 생성: 응답문 작성 -> 챗봇이 대답할 문장을 만듦
+    - **생성**: 응답문 작성 -> 챗봇이 대답할 문장을 만듦
 
-    - 실행: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
+    - **실행**: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
 
 <br/>
 
 - ex 사용자 입력: "오늘 서울 날씨 알려줘"
 
-    -  파싱 : 토큰화 → ["오늘", "서울", "날씨", "알려줘"] 후 품사 태깅 → 오늘(Noun), 서울(ProperNoun), 날씨(Noun), 알려줘(Verb)
+    -  **파싱** : 단어 단위로 분리 -> 품사 추
+    
+        - 토큰화 → ["오늘", "서울", "날씨", "알려줘"] 
+        
+        - 품사 태깅 → 오늘(Noun), 서울(ProperNoun), 날씨(Noun), 알려줘(Verb)
  
         - **구문 트리를 사용**해서 품사를 태깅함  
 
+    - **분석** : 의미 분석 
+ 
+        - 의도(Intent): 날씨 조회
 
+        - 개체(Entity): "서울" (위치)
 
+        - 시간: "오늘"
+     
+    - **생성** : 응답 후보 생성
+ 
+        - "오늘 서울의 날씨는 맑음입니다."
 
+        - "서울 오늘은 비가 올 예정이에요."
+
+    - **실행** : 여러 응답 중 하나를 선택
+ 
+        - 최종 출력: "오늘 서울의 날씨는 맑음입니다."
 
