--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -204,7 +204,7 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
 <br/>
 
-### 구문 트리를 이용한 NLP 파이프라인 
+### NLP 파이프라인 
 
 - **파이프라인** : 일련의 처리 과정이 순차적으로 이어진 것
 
@@ -224,19 +224,19 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
     -  **파싱** : 단어 단위로 분리 -> 품사 추
     
-        - 토큰화 → ["오늘", "서울", "날씨", "알려줘"] 
+        - 토큰화 : ["오늘", "서울", "날씨", "알려줘"] 
         
-        - 품사 태깅 → 오늘(Noun), 서울(ProperNoun), 날씨(Noun), 알려줘(Verb)
+        - 품사 태깅 : 오늘(Noun), 서울(ProperNoun), 날씨(Noun), 알려줘(Verb)
+     
+        - NER(개체명 인식) : “오늘” → 시간(time), “서울” → 위치(location) (명사 중심 정보만 파악)
+
+    - **분석** : 의미를 더 깊이 분석 
  
-        - **구문 트리를 사용**해서 품사를 태깅함  
+        - 의도(Intent): “알려줘”라는 동사가 질문/요청 의도임을 파악 → intent = 날씨 조회 (여기서 동사로 의도 파악)
 
-    - **분석** : 의미 분석 
- 
-        - 의도(Intent): 날씨 조회
+        - 개체(Entity): 시간(time) = 오늘, 위치(location) = 서울, 대상(target) = 날씨
 
-        - 개체(Entity): "서울" (위치)
-
-        - 시간: "오늘"
+        - 문맥적 이해 : 사용자가 지금 “서울의 오늘 날씨가 궁금하다”는 의미적 요청임을 해석
      
     - **생성** : 응답 후보 생성
  
