--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -218,6 +218,8 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
     - **실행**: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
 
+![System Resources](../../images/Natural%20Language%20Processing%20images/구문트리예시.png)
+
 <br/>
 
 - ex 사용자 입력: "오늘 서울 날씨 알려줘"
