--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -250,3 +250,22 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
  
         - 최종 출력: "오늘 서울의 날씨는 맑음입니다."
 
+<br/>
+
+- NLP 파이프라인 처리층 이미지
+
+![System Resources](../../images/Natural%20Language%20Processing%20images/NLP파이프라인처리층.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
