--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -254,7 +254,7 @@ np.arange(1, 12 + 1).prod()  # factorial(12)
 
 - NLP 파이프라인 처리층 이미지
 
-![System Resources](../../images/Natural%20Language%20Processing%20images/NLP파이프라인처리층.png)
+![System Resources](../../images/Natural%20Language%20Processing%20images/NLP파이프라인처리층.jpg)
 
 
 
