--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -15,7 +15,40 @@
     - 자연어는 문맥이 중요하기 때문에 **문법에만 근거해서 완전히 해석할 수 없으며**, 문법에도 예외가 존재 ex: "배"라는 말이 과일, 동물, 배(boat) 등 상황에 따라 달라짐
  
     - 자연어의 해석을 위해서는 배경지식이 필요한 경우도 많음 
-  
+
+<br/>
+
+### 자연어 처리가 어려운 대표적 이유
+
+- **1. 언어의 중의성**
+
+    - 동음이의어
+    
+        - ex : "배"라는 단어는 과일, 탈것, 신체 부위 등 여러 뜻이 있어서 애매함
+
+    - 문맥을 고려해야 함 (예: 반어법)
+
+        - ex : "정말 잘한다"가 비꼬는 말일 수도 있음
+
+<br/>
+
+- **2. 규칙의 예외**
+
+    - 자연어 문법에는 예외가 많음
+       
+        - 문법 규칙대로라면 맞지 않는데 실제 언어 사용에서는 예외적인 표현이 많아, 모든 경우를 다 다루기가 어려움
+
+<br/>
+
+- **3. 언어의 유연성 및 확장성**
+
+    - 같은 의미를 다양한 방식으로 표현 가능
+    
+        - 똑같은 뜻을 가진 말을 수십 가지 방법으로 바꿔 말할 수 있다.
+
+    - 단어/구문 추가로 무한히 확장 가능
+        
+        - 문장은 끝없이 길어질 수 있어서, 규칙만으로는 모든 문장을 처리하기 사실상 불가능하다.
 <br/>
 
 ### 자연어 처리 발전 과정 
