--- a/Natural Language Processing/Natural Language Processing study/01장.md
+++ b/Natural Language Processing/Natural Language Processing study/01장.md
@@ -18,6 +18,38 @@
 
 <br/>
 
+### 자연어 처리의 대표적 패러다임
+
+- **1. 규칙 기반 접근**
+
+    - 패턴 매칭을 기반으로 하여 자연어를 처리하는 방식
+
+    - 정해진 규칙(패턴)에 맞는 글자를 찾아내서 문장을 처리하는 방법이다.
+ 
+    - 제약이 많아서 간단한 작업에만 사용
+
+<br/>
+
+- **2. 통계 기반 접근**
+
+    - 미리 확보한 데이터들을 바탕으로 조건부 확률을 활용하여 자연어를 해석 혹은 생성
+
+    - 규칙 기반보다는 확장성이 좋으나 여전히 사람이 직접 관여해야하는 부분이 많음
+
+<br/>
+
+- **3. 머신러닝/딥러닝 기반**
+
+    - 보다 발전된 데이터 기반 접근방식으로써 머신러닝 기반에서는 특징 추출이 굉장히 중요
+
+    - 머신러닝은 데이터에서 중요한 패턴(특징)을 뽑아내는 게 핵심
+
+    - 딥러닝에 이르러 별도의 특징 추출 중요도가 감소 -> 전에 없던 의미 분석 및 자연어 생성 성능을 확보함
+    
+    - 딥러닝은 스스로 중요한 특징을 찾아냄-> 의미 파악과 문장 생성 능력이 크게 좋아짐
+
+<br/>
+
 ### 자연어 처리가 어려운 대표적 이유
 
 - **1. 언어의 중의성**
@@ -90,7 +122,7 @@
     - 이후 문서 분류에 사용 : 스포츠, 정치, 경제 등등을 분류
  
     - 2000년대부터는 스펨 필터와 감성 분석에 사용 : 스펨 판단 및 영화 리뷰 긍/부정 분류
-      
+
 <br/>
 
 ### 초창기 간단한 챗봇 예시 
