--- a/Discrete Structures/Discrete Structures study/01장.md
+++ b/Discrete Structures/Discrete Structures study/01장.md
@@ -31,7 +31,7 @@
 
 <br/>
 
-### 명제 기호 
+### 명제 기호 (Propositional Variables)
 
 - Propositional Variables: p, q, r, s, 등등
      - 명제를 기호화할 때 p, q, r, s 같은 문자를 사용
@@ -41,6 +41,10 @@
 - 항상 참인 명제를 T (Tautology, 항진명제)
 
 - 항상 거짓인 명제를 F (Contradiction, 모순명제)
+
+<br/>
+
+### 논리 연산 기호 (Logical Connectives)
 
 - Negation (¬): 부정. ex: “p가 참” → “¬p는 거짓”
 
@@ -56,7 +60,7 @@
 
 <br/>
 
-### 명제 기호를 배우는 이유 (시험 x)
+### 명제 기호 및 논리 기호를 배우는 이유 (시험 x)
 
 - 컴퓨터는 결국 **0과 1(참/거짓)** 으로만 사고
     - 논리 기호는 바로 **불 대수(Boolean Algebra)** 와 연결되어, 프로그래밍/알고리즘/회로 설계의 기초가 됨
@@ -155,13 +159,13 @@
 
 <br/>
 
-### Converse (역), Inverse (이), Contrapositive (대우)
+### 논리식의 변형
 
 - 원래 명제: p → q
 
-  - 역(Converse): q → p (자리 바꿈)
-  - 이(Inverse): ¬p → ¬q (둘 다 부정)
-  - 대우(Contrapositive): ¬q → ¬p (둘 다 부정 + 자리 바꿈 → 원래와 동치)
+  - **역(Converse)**: q → p (자리 바꿈)
+  - **이(Inverse)**: ¬p → ¬q (둘 다 부정)
+  - **대우(Contrapositive)**: ¬q → ¬p (둘 다 부정 + 자리 바꿈 → 원래와 동치)
 
 - 예시 : 비가 오면 나는 마을에 가지 않는다.” (p → q)
     - **Converse (역)**: If I do not go to town, then it is raining.
