--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -1,1 +1,67 @@
+### 1주차 
 
+- **명제**
+
+    - **참(True) 또는 거짓(False)** 둘 중 하나로 판별할 수 있는 서술문
+
+<br/>
+
+- **명제종류**
+
+    - 항진명제(tautology) : 항상 참(True)인 명제
+
+    - 모순(contradiction) : 항상 거짓(False)인 명제
+
+    - 불확정명제(contingency) : 항상 참도 아니고, 항상 거짓도 아닌 명제
+
+<br/>
+
+-  **논리 기호**
+
+    - Negation (¬): 부정. ex: “p가 참” → “¬p는 거짓”
+
+    - Conjunction (∧): 논리곱, “그리고(and)”
+
+    - Disjunction (∨): 논리합, “또는(or)”
+ 
+    - XOR (배타적 OR) : 정확히 하나만 참일 때 참
+
+    - Implication (→): 함의, 만약 p라면, q이다
+
+    - Biconditional (↔): 쌍조건, p와 q가 같을 때 참, 다를 때 거짓
+
+<br/>
+
+- **논리식의 변형**
+  
+    - Inverse (이) : ¬p → ¬q (둘 다 부정)
+      
+    - Converse (역) : q → p (자리 바꿈)
+
+    - Contrapositive (대우) : ¬q → ¬p (둘 다 부정 + 자리 바꿈 → 원래와 동치)
+
+<br/>
+
+- **Logical Equivalence (논리적 동치)**
+
+    - 두 복합 명제 p와 q가 항상 같은 진리값인 경우
+ 
+    - 기호로는 p ⇔ q 또는 p ≡ q
+ 
+    - Biconditional (↔) : 특정 상황
+ 
+    - Logical Equivalence (⇔) : 항상 
+
+<br/>
+
+- **satisfiable (만족 가능), unsatisfiable (만족 불가능)**
+
+    - **만족 가능 (satisfiable)** : 하나의 경우라도 찾으면 만족
+ 
+    - 만족 불가능 (unsatisfiable): 그 부정이 항상 참(항진명제)
+
+<br/>
+
+- **연산자 우선 순위**
+
+![System Resources](../../images/Discrete%20Structures%20images/연산자우선순위.png)
