--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -1,1 +1,25 @@
+### 1주차
 
+- **자연어 처리가 어려운 이유**
+
+    - **언어의 중의성** : 동음이의어 (ex: 배), 문맥을 고려해야함 (ex:"정말 잘한다"가 비꼬는 말투)
+
+    - **규칙의 예외**
+ 
+    - **언어의 유연성 및 확장성**
+ 
+<br/>
+
+- **자연어 처리 발전 과정**
+
+    - 1950~60년대 초창기: 규칙 기반 NLP (조건문/패턴 매칭, 단순 챗봇) → 의미 이해 불가, 한계 많음
+
+    - 아이디어 전환: 문자 단위가 아니라 단어 단위 의미로 해석 → 벡터화하여 기계학습 활용
+
+    - **Bag-of-Words** 등장
+
+        - 초기: 문서 검색
+
+        - 이후: 문서 분류
+
+        - 2000년대: 스팸 필터, 감성 분석
