--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -17,9 +17,61 @@
     - 아이디어 전환: 문자 단위가 아니라 단어 단위 의미로 해석 → 벡터화하여 기계학습 활용
 
     - **Bag-of-Words** 등장
+ 
+        - 유의미한 단어들의 등장 횟수를 벡터로 표현 (불용어 제외)
+     
+        - 단점 : 단어들의 순서 및 문법 정보를 손상
+ 
+        - ex: “개가 사람을 물었다” vs “사람이 개를 물었다” 를 보고 개와 사람과 관련이 있는 문장이라고만 파악
+     
+    - Bag-of-words 초기 극복 아이디어
+ 
+        - **구문 트리** 사용
+     
+            - 구문 트리 : 문법적 구조(syntactic structure) 를 표현하는 도구
 
-        - 초기: 문서 검색
+        
+<br/>   
 
-        - 이후: 문서 분류
+- **NLP 파이프라인**
 
-        - 2000년대: 스팸 필터, 감성 분석
+    - **파싱**: 특징 및 수치 자료 추출 -> 입력 문장에서 필요한 정보(단어, 품사 등)를 뽑음
+
+    - **분석**: 특징 추가 생성 및 결합 -> 뽑아낸 정보를 조합해서 더 의미 있는 표현을 만듦
+
+    - **생성**: 응답문 작성 -> 챗봇이 대답할 문장을 만듦
+
+    - **실행**: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
