--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -23,3 +23,95 @@
         - ∀xP(x): “모든 x가 0보다 크다” → −1과 0 때문에 거짓
    
         - ∃xP(x): “어떤 x는 0보다 크다”→ 1이 있어서 참
+
+<br/>
+
+### 명제함수(Propositional function) 예시
+
+- 예시 1 :  R(x,y,z) : x + y = z 라고 정의하고, 도메인 U는 정수 전체
+
+    - R(2, -1, 5): 2 + (−1) = 5 → 1 = 5 → 거짓 (F)
+
+    - R(3, 4, 7): 3 + 4 = 7 → 참 (T)
+
+    - R(x, 3, z): x, z에 구체적인 값이 없으므로 **참/거짓 판단 불가** → Not a Proposition
+
+- 예시 2 : Q(x,y,z) : x − y = z 라고 정의
+
+    - Q(2, -1, 3): 2 − (−1) = 3 → 3 = 3 → 참 (T)
+
+    - Q(3, 4, 7): 3 − 4 = 7 → −1 = 7 → 거짓 (F)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
